--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "canonical-path": "0.0.2",
     "dgeni": "^0.4.1",
+    "dgeni-packages": "^0.10.8",
     "grunt": "^0.4.1",
     "grunt-angular-templates": "^0.5.7",
     "grunt-autoprefixer": "^0.7.3",
@@ -23,6 +25,7 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-dgeni": "0.0.3",
     "grunt-filerev": "^0.2.1",
     "grunt-google-cdn": "^0.4.0",
     "grunt-karma": "^0.9.0",
